hard-gists/3015625/run.log
=== Docker Run Log for 3015625 ===
Started at: Mi 29. Okt 13:36:50 CET 2025

[2025-10-29 13:36:51] START: Running container for 3015625
[2025-10-29 13:36:51] SUCCESS: Container 1fb12891575cfe6ff154d3e041c36507e7b84d1fd62ba8e8a0ac21bc34390474 started for 3015625
=== Container logs for 3015625 ===
  File "/snippet.py", line 46
    print opts
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3015625 ===
[2025-10-29 13:36:53] INFO: Container 1fb12891575cfe6ff154d3e041c36507e7b84d1fd62ba8e8a0ac21bc34390474 has stopped
